# Haskell-Project

./: 2022li1g111.cabal  README.md
src/: LI12223.hs  Main.hs  Tarefa1_2022li1g111.hs  Tarefa2_2022li1g111.hs  Tarefa3_2022li1g111.hs  Tarefa4_2022li1g111.hs  Tarefa5_2022li1g111.hs  Tarefa6_2022li1g111.hs
src/doc/Main/: Main.html  Tarefa1_2022li1g111.html  Tarefa3_2022li1g111.html  Tarefa4_2022li1g111.html  Tarefa5_2022li1g111.html  doc-index.html  index.html
src/doc/Tarefa1/: Tarefa1_2022li1g111.html  doc-index.html  index.html
src/doc/Tarefa2/: Tarefa2_2022li1g111.html  doc-index.html  index.html
src/doc/Tarefa3/: Tarefa3_2022li1g111.html  doc-index.html  index.html
src/doc/Tarefa4/: Tarefa4_2022li1g111.html  doc-index.html  index.html
src/doc/Tarefa5/: LI12223.html  Tarefa2_2022li1g111.html  doc-index.html  index.html
src/doc/Tarefa6/: LI12223.html  Tarefa2_2022li1g111.html  Tarefa6_2022li1g111.html  doc-index.html  index.html
tests/: Spec.hs  Tarefa1_2022li1g111_Spec.hs  Tarefa2_2022li1g111_Spec.hs  Tarefa3_2022li1g111_Spec.hs  Tarefa4_2022li1g111_Spec.hs
