cabal-version:      2.4
name:               2022li1g111
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

author:             Edgar Alexandre Capela Pinto <a104081@alunos.uminho.pt>
                    Diogo Alexandre Pereira Da Costa <a95147@alunos.uminho.pt>

library
  exposed-modules:
    LI12223
    Tarefa1_2022li1g111
    Tarefa2_2022li1g111
    Tarefa3_2022li1g111
    Tarefa4_2022li1g111
  build-depends:    base ^>=4.16.3.0
  hs-source-dirs:   src
  default-language: Haskell2010

executable 2022li1g111
  main-is:          Main.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g111
    Tarefa2_2022li1g111
    Tarefa3_2022li1g111
    Tarefa4_2022li1g111
  build-depends:    base ^>=4.16.3.0
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite 2022li1g111-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g111
    Tarefa2_2022li1g111
    Tarefa3_2022li1g111
    Tarefa4_2022li1g111
    Tarefa1_2022li1g111_Spec
    Tarefa2_2022li1g111_Spec
    Tarefa3_2022li1g111_Spec
    Tarefa4_2022li1g111_Spec
  build-depends:        base ^>=4.16.3.0, HUnit
  hs-source-dirs:       tests src
  default-language:     Haskell2010
